--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language : csharp
 solution : ApiSecuritySolution.sln
+install:
+  - nuget restore ApiSecuritySolution.sln
+  - nuget install NUnit.Runners -Version 3.9.0 -OutputDirectory testrunner
+script:
+  - xbuild /p:Configuration=Release ApiSecuritySolution.sln
+  - mono ./testrunner/NUnit.Runners.3.9.0/tools/nunit-console.exe ./ApiUtilLibTest/bin/Debug/ApexUtilLibTest.dll
